name:                locomotive-haskell
version:             0.1.0.0
synopsis:            Locomotive BASIC interpreter
-- description:
homepage:            https://github.com/githubuser/locomotive-haskell#readme
license:             GPL-3
license-file:        LICENSE
author:              Jonathan W. Armond
maintainer:          jon.armond@gmail.com
copyright:           2017 Jonathan W. Armond
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Loco.Parser
                     , Loco.Lexer
                     , Loco.Identifiers
                     , Loco.AST
                     , Loco.Eval
                     , Loco.Error
                     , Loco.Store
                     , Loco.Interpreter
                     , Loco.Pretty
                     , Loco.Commands
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , megaparsec
                     , ListZipper
                     , pretty
  default-language:    Haskell2010

executable locomotive-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , locomotive-haskell
  default-language:    Haskell2010

test-suite locomotive-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HUnit
                     , base
                     , mtl
                     , locomotive-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jarmond/locomotive-haskell
